---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Added dedicated buttons to move subfactories and recipe up and down, making the interaction more discoverable and easier to use
    - Reordered the subfactory list buttons to make more sense by grouping the archive-related ones
    - Added a ko-fi link to the preferences dialog
  Bugfixes:
    - Fixed that the first recipe on subfloors could be moved down in certain circumstances
    - Fixed that shift-click adding a subfactory and cancelling the picker dialog would create an empty subfactory

---------------------------------------------------------------------------------------------------
Version: 1.1.29
Date: 04. 11. 2021
  Bugfixes:
    - Fixed that the priority product selection would be dropped when disabling a recipe line
    - Fixed that recipes would show products with amount equal to 0 when they have a subfloor
    - Fixed that the utility dialog combinator blueprint was limited to two machines per combinator
    - Fixed that the buttons to check off line recipes would show a tooltip when it shouldn't

---------------------------------------------------------------------------------------------------
Version: 1.1.28
Date: 29. 10. 2021
  Bugfixes:
    - Fixed a crash when trying to pipette a beacon from the Factory Planner interface

---------------------------------------------------------------------------------------------------
Version: 1.1.27
Date: 24. 10. 2021
  Features:
    - Added the ability for beacons to have more than one type of module at once (huge thanks to curiosity!)
  Bugfixes:
    - Fixed a crash related to ingredient satisfaction and disabled recipes
    - Fixed a crash when trying to add beacons while having the Satisfactorio mod active
    - Fixed that the item picker would offer disabled/hidden belts