@@ -31,6 +31,7 @@ fp_subfactory_list_rows=Interface height [img=info]
 fp_alt_action=Open in other mod [img=info]
 fp_default_timescale=Default timescale [img=info]
 fp_view_belts_or_lanes=Belts or Lanes [img=info]
+fp_prefer_product_picker=Prefer product picker [img=info]
 fp_prefer_matrix_solver=Prefer matrix solver [img=info]
 
 [mod-setting-description]
@@ -40,6 +41,7 @@ fp_subfactory_list_rows=Set the main interface height by choosing how many subfa
 fp_alt_action=Select an action when alt-clicking any item- or recipe-button. Currently works with FNEI, WIIRUF and Recipe Book. The mod has to be installed and enabled before it shows up in this list.
 fp_default_timescale=Choose the timescale that any new subfactory should be created with.
 fp_view_belts_or_lanes=Indicate whether you think of item throughput as individual lanes or as full belts.
+fp_prefer_product_picker=Decide whether adding new subfactories should start with choosing a product or a subfactory name.
 fp_prefer_matrix_solver=Decide whether new subfactories should enable the matrix solver instead of the traditional one.
 
 [string-mod-setting]
@@ -276,7 +278,8 @@ action_export_subfactory=Export subfactories to a string that can be shared with
 action_archive_subfactory=Move the selected subfactory to the archive
 action_unarchive_subfactory=Move the selected subfactory back out of archive
 action_duplicate_subfactory=Duplicate the selected subfactory, creating a perfect copy
-action_add_subfactory=Create a new subfactory\n[font=default-semibold][color=#84CDEC]Shift-click[/color][/font] to choose a product right away
+action_add_subfactory_by_name=Create a new subfactory\n[font=default-semibold][color=#84CDEC]Shift-click[/color][/font] to choose a product right away
+action_add_subfactory_by_product=Pick an item for a new subfactory\n[font=default-semibold][color=#84CDEC]Shift-click[/color][/font] to give it a name first
 action_edit_subfactory=Edit the name and icon of the selected subfactory
 action_trash_subfactory=Trash the selected subfactory\nIt will be preserved in the archive for __1__ minutes
 action_delete_subfactory=Delete the selected subfactory irreversibly
